opam-version: "2.0"
maintainer: "ygrek@autistici.org"
authors: ["ygrek"]
homepage: "https://ygrek.org/p/sqlgg/"
dev-repo: "git+https://github.com/ygrek/sqlgg.git"
bug-reports: "https://github.com/ygrek/sqlgg/issues"
license: "GPL-2.0-only"
tags: [ "org:ygrek" ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install" "@doc" {with-doc}]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "2.0"}
  "menhir"
  "mybuild"
  "ppx_deriving"
  ("extlib" | "extlib-compat")
  "base-unix"
  "odoc" {with-doc}
  "ounit"
]
depopts: [
  "mariadb"
  "mysql"
  "sqlite3"
  "trace"
]
conflicts: [
  "trace" {< "0.3.0" | >= "0.6.0"}
]
synopsis: "SQL Guided (code) Generator"
description: """
sqlgg is an SQL query parser and binding code generator for C#, C++, Java, OCaml.
It starts off with SQL schema and queries, and generates code (or XML, allowing
further code generation for various purposes). Generated code only defines a mapping
of output columns and query parameters to the host language, trying to be as unobtrusive
as possible and leaving the choice of SQL database (and API to access it) to the developer."""
