(executable
 (name gen_version)
 (libraries mybuild)
 (modules gen_version)
 (preprocess (pps ppx_deriving.std)))

(rule
 (target version.ml)
 (deps (universe))
 (action (run ./gen_version.exe %{target})))

(executable
  (public_name sqlgg)
  (modules :standard \ gen_version)
  (name cli)
  (promote (until-clean))
  (libraries
    extlib
    oUnit
    sqlgg
    unix
  )
  (preprocess (pps ppx_deriving.std))
)

(rule
 (alias runtest)
 (deps ./cli.exe)
 (action
   (run ./cli.exe -test)))

(rule
 (targets _cli-options.md)
 (deps ./cli.exe)
 (mode (promote (into ../doc)))
 (action
   (with-stdout-to %{targets} (run ./cli.exe -options-md))))
