(cram
 (deps
  %{bin:sqlgg}
  (glob_files *.sql)
  (glob_files *.compare.ml)
  (source_tree test_build_json_functions)
  (source_tree test_build_enum_literals)
  (source_tree test_build_dynamic_select)
  (glob_files print_ocaml_impl.ml)
  (glob_files test_cached_prepared_stmts.ml)
  (glob_files print_impl.ml)
  sqlgg_test.sh))
